--- a/views/index.html
+++ b/views/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
