muevo Design a public y agrego primer draft de productDetail

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -12,6 +12,40 @@
     <header>
         <p>Se copiará de Index</p>
     </header>
+
+    <section>
+
+        <div class="product-imgs">
+            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+        </div>
+
+        <div>
+            <h4>Stout</h4>
+            <p>Cerveza negra con notas a café y chocolate levemente lupulada y moderada en alcohol.</p>
+            <ul>
+                <li><h5>Amargor:</h5> <p>30%</p></li>
+                <li><h5>Alcohol:</h5> <p>6 V/V</p></li>
+                <li><h5>Color:</h5> <p>35 SRM</p></li>
+                <li><h5>Lúpulo/s:</h5> <p>Cascade</p></li>
+            </ul>
+        </div>
+
+        <form>
+            <input type='checkbox' name="productOption">Botella 500 ml
+            <input type='checkbox' name="productOption">Botella 1 lt
+            <input type='checkbox' name="productOption">Pack x 6 - 500 ml
+            <input type='checkbox' name="productOption">Pack x 6 - 1 lt
+        </form>
+
+        <div>
+            <button>Comprar</button>
+            <button>Agregar al carrito</button>
+        </div>
+
+        
+    </section>
     
     <footer>
         <p>Se copiará de Index</p>
