--- a/views/productPage.html
+++ b/views/productPage.html
@@ -12,6 +12,52 @@
     <header>
         <p>Se copiará de Index</p>
     </header>
+
+    <main>
+        <section>
+            <div class="product">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>IPA</h4>
+                <h4>$ 250</h4>
+                <button>Seleccionar</button>
+            </div>
+
+            <div class="product">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>Golden Ale</h4>
+                <h4>$ 200</h4>
+                <button>Seleccionar</button>
+            </div>
+            
+            <div class="product">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>Irish Red</h4>
+                <h4>$ 200</h4>
+                <button>Seleccionar</button>
+            </div>
+
+            <div class="product">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>Stout</h4>
+                <h4>$ 200</h4>
+                <button>Seleccionar</button>
+            </div>
+
+            <div class="product">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>Honey</h4>
+                <h4>$ 200</h4>
+                <button>Seleccionar</button>
+            </div>
+
+            <div class="pack-customized">
+                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <h4>Pack Personalizado</h4>
+                <h4>Desde $ 600</h4>
+                <button>Seleccionar</button>
+            </div>
+
+        </section>
     
     <footer>
         <p>Se copiará de Index</p>
