agrego fuente a styles

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <p>Se copiará de Index</p>
+        <p>HEADER Se copiará de Index</p>
     </header>
 
     <section>
@@ -48,7 +48,7 @@
     </section>
     
     <footer>
-        <p>Se copiará de Index</p>
+        <p>FOOTER Se copiará de Index</p>
     </footer>
 </body>
 </html>
