--- a/views/productPage.html
+++ b/views/productPage.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <header>
-        <p>Se copiará de Index</p>
+        <p>HEADER Se copiará de Index</p>
     </header>
 
     <main>
         <section>
             <div class="product">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <img src="/images/img-beer-temporary.jpg" alt="beer">
                 <h4>IPA</h4>
                 <h4>$ 250</h4>
                 <button>Seleccionar</button>
             </div>
 
             <div class="product">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <img src="/images/img-beer-temporary.jpg"  alt="beer">
                 <h4>Golden Ale</h4>
                 <h4>$ 200</h4>
                 <button>Seleccionar</button>
             </div>
             
             <div class="product">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <img src="/images/img-beer-temporary.jpg"  alt="beer">
                 <h4>Irish Red</h4>
                 <h4>$ 200</h4>
                 <button>Seleccionar</button>
@@ -60,7 +60,7 @@
         </section>
     
     <footer>
-        <p>Se copiará de Index</p>
+        <p>FOOTER Se copiará de Index</p>
     </footer>
 </body>
 </html>
