--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,19 @@
 body {
-    background-color: #ebebeb;
+    font-family: 'Montagu Slab', serif;
+}
+
+section div {
+    border: solid 1px #c4c4c4;
+    margin: auto;
+    max-width: 300px;
+}
+
+.product, .pack-customized {
+    text-align: center;
+    margin: 10px 0;
+    padding: 10px;
+}
+
+div.product img, div.pack-customized img {
+    width: 100%;
 }
