--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -24,7 +24,7 @@
         <div>
             <h4>Stout</h4>
             <p>Cerveza negra con notas a café y chocolate levemente lupulada y moderada en alcohol.</p>
-            <ul>
+            <ul class="beer-attributes">
                 <li><h5>Amargor:</h5> <p>30%</p></li>
                 <li><h5>Alcohol:</h5> <p>6 V/V</p></li>
                 <li><h5>Color:</h5> <p>35 SRM</p></li>
@@ -32,16 +32,18 @@
             </ul>
         </div>
 
-        <form>
-            <input type='checkbox' name="productOption">Botella 500 ml
-            <input type='checkbox' name="productOption">Botella 1 lt
-            <input type='checkbox' name="productOption">Pack x 6 - 500 ml
-            <input type='checkbox' name="productOption">Pack x 6 - 1 lt
-        </form>
-
         <div>
-            <button>Comprar</button>
-            <button>Agregar al carrito</button>
+            <form class="product-form">
+                <input type='checkbox' name="productOption">Botella 500 ml
+                <input type='checkbox' name="productOption">Botella 1 lt
+                <input type='checkbox' name="productOption">Pack x 6 - 500 ml
+                <input type='checkbox' name="productOption">Pack x 6 - 1 lt
+            </form>
+    
+            <div>
+                <button>Comprar</button>
+                <button>Agregar al carrito</button>
+            </div>
         </div>
 
         
