--- a/views/index.html
+++ b/views/index.html
@@ -4,11 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <p>Prueba de inicio</p>
+    <header>
+        <header class="main-header">
+            <div class="main-header-top-bar">
+            <img src="/images/CHEC - LogoFinalEscalaGrises.png" class="logo">
+            <h2 class="text-header">Cerveza hecha en casa</h2>    
+        </div>
+            
+        <a href="#" class="hamburguer-botton">
+            <i class="fas fa-bars"></i> 
+        </a>
+
+        <nav class="main-navbar">
+        <ul class="left-navbar">
+            <li><a href="">Home </a></li>
+            <li><a href="">Quienes somos </a></li>
+            <li><a href="">Nuestras Recetas </a></li>
+            <li><a href="">Contactanos </a></li>
+            <li><a href="">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
+        </ul> 
+        <ul class="right-navbar">
+            <li><a href="#" class="tienda-botton">Tienda </a>
+                <a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a>
+            </li>
+                <a href="#" class="redes"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" class="redes"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="redes"><i class="fab fa-instagram"></i></a>
+        </ul> 
+        </nav> 
+    </header>
+    <nav class="navbar2">
+        <input type="text" placeholder="Busca aquí">
+        <a href="#"class="lupa"><i class="fas fa-beer"></i></a>
+        <a href="#" class="redes2"><i class="fab fa-whatsapp"></i></a>
+        <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
+        <a href="#" class="redes2"><i class="fab fa-instagram"></i></a>
+    </nav>
+    <section>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ullam minus, non nobis nemo, repudiandae doloribus a excepturi fugiat quasi at, fuga quia in. Sapiente amet illo corrupti? Facere, ipsam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ullam minus, non nobis nemo, repudiandae doloribus a excepturi fugiat quasi at, fuga quia in. Sapiente amet illo corrupti? Facere, ipsam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ullam minus, non nobis nemo, repudiandae doloribus a excepturi fugiat quasi at, fuga quia in. Sapiente amet illo corrupti? Facere, ipsam.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio ullam minus, non nobis nemo, repudiandae doloribus a excepturi fugiat quasi at, fuga quia in. Sapiente amet illo corrupti? Facere, ipsam.</p>
+        
+    </section>
+
+
+<footer>
+    <div class="footer-topbar">
+        <img src="/Desing/Logo-Etiqueta-Originals/540x540.png" class="logofooter">
+    
+        <ul class="footer-suscribe">
+            <li><h5 class="text-footer">¿Queres ser nuestro amigo? Te enviaremos ofertas, promociones y nuestras recetas!</h5></li>     
+            <li> <input type="Email" placeholder="tunombre@email.com"></li>   
+            <li><a href="#" class="suscribe-botton"><i class="fas fa-angle-double-right"></i> </a>
+            
+        </ul>
+
+        <ul class="footer-links">
+            <li><a href="">Home </a></li>
+            <li><a href="">Quienes somos </a></li>
+            <li><a href="">Nuestras Recetas </a></li>
+            <li><a href="">Tienda </a></li>
+
+        </ul>
+        <ul class="footer-redes">
+            <li><a href="" ><i class="fab fa-whatsapp"></i>  +54 9 11 12344567</a></li>
+            <li><a href="" ><i class="fab fa-facebook"></i>  /checCerveceria</a></li>
+            <li><a href="" ><i class="fab fa-instagram"></i> @cervezaChec</a></li>
+        </ul>
+    </div>
+    <div class="copyright"> Copyright © 2022 - All rights reserved - Created by Grupo 8  </div>
+</footer>
 </body>
 </html>
