--- a/views/productPage.html
+++ b/views/productPage.html
@@ -9,58 +9,120 @@
     <title>CHEC</title>
 </head>
 <body>
-    <header>
-        <p>HEADER Se copiará de Index</p>
+    <header class="main-header">
+        <div class="main-header-top-bar">
+            <img src="/Desing/Logo-Etiqueta-Originals/540x540.png" class="logo">
+            <h2 class="text-header">Cerveza hecha en casa</h2>    
+        </div>
+            
+        <a href="#" class="hamburguer-botton">
+            <i class="fas fa-bars"></i> 
+        </a>
+
+        <nav class="main-navbar">
+        <ul class="left-navbar">
+            <li><a href="">Home </a></li>
+            <li><a href="">Quienes somos </a></li>
+            <li><a href="">Nuestras Recetas </a></li>
+            <li><a href="">Contactanos </a></li>
+            <li><a href="">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
+        </ul> 
+        <ul class="right-navbar">
+            <li><a href="#" class="tienda-botton">Tienda </a>
+                <a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a>
+            </li>
+                <a href="#" class="redes"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" class="redes"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="redes"><i class="fab fa-instagram"></i></a>
+        </ul> 
+        </nav> 
     </header>
 
-    <main>
-        <section>
-            <div class="product">
-                <img src="/images/img-beer-temporary.jpg" alt="beer">
-                <h4>IPA</h4>
-                <h4>$ 250</h4>
-                <button>Seleccionar</button>
-            </div>
+    <main class="pd-main">
+        <section class="pd-tienda">
 
-            <div class="product">
-                <img src="/images/img-beer-temporary.jpg"  alt="beer">
-                <h4>Golden Ale</h4>
-                <h4>$ 200</h4>
-                <button>Seleccionar</button>
-            </div>
+            <article class="pd-product">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>IPA</h4>
+                    <h4>$ 250</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+                
+            </article>
+
+            <article class="pd-product">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>Golden Ale</h4>
+                    <h4>$ 200</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+            </article>
             
-            <div class="product">
-                <img src="/images/img-beer-temporary.jpg"  alt="beer">
-                <h4>Irish Red</h4>
-                <h4>$ 200</h4>
-                <button>Seleccionar</button>
-            </div>
+            <article class="pd-product">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg"  alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>Irish Red</h4>
+                    <h4>$ 200</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+            </article>
 
-            <div class="product">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-                <h4>Stout</h4>
-                <h4>$ 200</h4>
-                <button>Seleccionar</button>
-            </div>
+            <article class="pd-product">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>Stout</h4>
+                    <h4>$ 200</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+            </article>
 
-            <div class="product">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-                <h4>Honey</h4>
-                <h4>$ 200</h4>
-                <button>Seleccionar</button>
-            </div>
+            <article class=" pd-product">
+                <img class="pd-img-product"src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>Honey</h4>
+                    <h4>$ 200</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+            </article>
 
-            <div class="pack-customized">
-                <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-                <h4>Pack Personalizado</h4>
-                <h4>Desde $ 600</h4>
-                <button>Seleccionar</button>
-            </div>
+            <article class="pack-customized">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <div class="pd-datos-cerveza">
+                    <h4>Pack Personalizado</h4>
+                    <h4>Desde $ 600</h4>
+                    <button class="pd-seleccionar">Seleccionar</button>
+                </div>
+            </article>
 
         </section>
     
-    <footer>
-        <p>FOOTER Se copiará de Index</p>
-    </footer>
+        <footer>
+            <div class="footer-topbar">
+                <img src="/Desing/Logo-Etiqueta-Originals/540x540.png" class="logofooter">
+            
+                <ul class="footer-suscribe">
+                    <li><h5 class="text-footer">¿Queres ser nuestro amigo? Te enviaremos ofertas, promociones y nuestras recetas!</h5></li>     
+                    <li> <input type="Email" placeholder="tunombre@email.com"></li>   
+                    <li><a href="#" class="suscribe-botton"><i class="fas fa-angle-double-right"></i> </a>
+                    
+                </ul>
+        
+                <ul class="footer-links">
+                    <li><a href="">Home </a></li>
+                    <li><a href="">Quienes somos </a></li>
+                    <li><a href="">Nuestras Recetas </a></li>
+                    <li><a href="">Tienda </a></li>
+        
+                </ul>
+                <ul class="footer-redes">
+                    <li><a href="" ><i class="fab fa-whatsapp"></i>  +54 9 11 12344567</a></li>
+                    <li><a href="" ><i class="fab fa-facebook"></i>  /checCerveceria</a></li>
+                    <li><a href="" ><i class="fab fa-instagram"></i> @cervezaChec</a></li>
+                </ul>
+            </div>
+            <div class="copyright"> Copyright © 2022 - All rights reserved - Created by Grupo 8  </div>
+        </footer>
 </body>
 </html>
