--- a/views/productPage.html
+++ b/views/productPage.html
@@ -38,10 +38,11 @@
         </nav> 
     </header>
 
-    <main class="pd-main">
-        <section class="pd-tienda">
+    <main class="pd-main"> 
+        <h2 class="pd-titulo">Tienda</h2>
+        <section class="pd-tienda"> 
 
-            <article class="pd-product">
+            <article class="pd-product"> 
                 <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
                 <div class="pd-datos-cerveza">
                     <h4>IPA</h4>
