--- a/views/index.html
+++ b/views/index.html
@@ -8,22 +8,22 @@
     <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1eb023256c.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
             <ul class="left-navbar">                
-                <li><a href="">Home </a></li>
+                <li><a href="/">Home </a></li>
                 <li><a href="">Quienes somos </a></li>
-                <li><a href="">Nuestras Recetas </a></li>
+                <li><a href="/views/productPage.html">Nuestras Recetas </a></li>
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#" class="tienda-botton">Tienda </a></li>
-                <li>a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>            
+                <li><a href="/views/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/views/productDetail.html" class="tienda-botton">Tienda </a></li>
+                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>            
             </ul>
         </nav> 
         <div class="secondary-navbar">
@@ -57,7 +57,9 @@
     </div>
 <footer>
     <div class="main-footer">
-        <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
+        <div class="div-content-logoFooter">
+            <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
+        </div>
         <ul class="footer-links">
             <li>Enlaces</li>
             <li><a href="">Tienda </a></li>
