--- a/views/productPage.html
+++ b/views/productPage.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&family=Montagu+Slab&family=Roboto&display=swap"
+        rel="stylesheet">
     <script src="https://kit.fontawesome.com/1eb023256c.js" crossorigin="anonymous"></script>
-    <title>PaginaProducto    </title>
+    <title>PaginaProducto </title>
 </head>
+
 <body>
     <header class="main-header">
         <nav class="main-navbar">
             <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logo">
-            <ul class="left-navbar">                
+            <ul class="left-navbar">
                 <li><a href="/">Home </a></li>
                 <li><a href="">Quienes somos </a></li>
                 <li><a href="/views/productPage.html">Nuestras Recetas </a></li>
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/views/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/views/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="/views/productDetail.html" class="tienda-botton">Tienda </a></li>
-                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>            
+                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>
             </ul>
-        </nav> 
+        </nav>
         <div class="secondary-navbar">
             <div class="hamburguer-button">
-                <i class="fas fa-bars"></i> 
+                <i class="fas fa-bars"></i>
             </div>
             <div class="search-bar">
-                <input type="text" placeholder="Busca aquí">                
+                <input type="text" placeholder="Busca aquí">
                 <a href="#" class="lupa"><i class="fas fa-beer"></i></a>
-            </div> 
+            </div>
             <div class="social-media-bar">
                 <a href="#" class="redes2"><i class="fab fa-whatsapp"></i></a>
                 <a href="#" class="redes2"><i class="fab fa-facebook"></i></a>
                 <a href="#" class="redes2"><i class="fab fa-instagram"></i></a>
-            </div>           
+            </div>
         </div>
     </header>
-    <section>
-        <div class="product">
-            <img src="/images/img-beer-temporary.jpg" alt="beer">
-            <h4>IPA</h4>
-            <h4>$ 250</h4>
-            <button>Seleccionar</button>
-        </div>
 
-    <main class="pd-main"> 
+
+    <main class="pd-main">
         <h2 class="pd-titulo">Tienda</h2>
-        <section class="pd-tienda"> 
+        <section class="pd-tienda">
 
-            <article class="pd-product"> 
+            <article class="pd-product">
                 <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
                 <div class="pd-datos-cerveza">
                     <h4>IPA</h4>
                     <h4>$ 250</h4>
                     <button class="pd-seleccionar">Seleccionar</button>
                 </div>
-                
+
             </article>
 
             <article class="pd-product">
@@ -71,9 +68,9 @@
                     <button class="pd-seleccionar">Seleccionar</button>
                 </div>
             </article>
-            
+
             <article class="pd-product">
-                <img class="pd-img-product" src="/images/img-beer-temporary.jpg"  alt="beer">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" alt="beer">
                 <div class="pd-datos-cerveza">
                     <h4>Irish Red</h4>
                     <h4>$ 200</h4>
@@ -91,7 +88,7 @@
             </article>
 
             <article class=" pd-product">
-                <img class="pd-img-product"src="/images/img-beer-temporary.jpg" width="360" alt="beer">
+                <img class="pd-img-product" src="/images/img-beer-temporary.jpg" width="360" alt="beer">
                 <div class="pd-datos-cerveza">
                     <h4>Honey</h4>
                     <h4>$ 200</h4>
@@ -108,102 +105,32 @@
                 </div>
             </article>
 
-        </section>
-    
-        <footer>
-            <div class="footer-topbar">
-                <img src="/Desing/Logo-Etiqueta-Originals/540x540.png" class="logofooter">
-            
-                <ul class="footer-suscribe">
-                    <li><h5 class="text-footer">¿Queres ser nuestro amigo? Te enviaremos ofertas, promociones y nuestras recetas!</h5></li>     
-                    <li> <input type="Email" placeholder="tunombre@email.com"></li>   
-                    <li><a href="#" class="suscribe-botton"><i class="fas fa-angle-double-right"></i> </a>
-                    
-                </ul>
-        
-                <ul class="footer-links">
-                    <li><a href="">Home </a></li>
-                    <li><a href="">Quienes somos </a></li>
-                    <li><a href="">Nuestras Recetas </a></li>
-                    <li><a href="">Tienda </a></li>
-        
-                </ul>
-                <ul class="footer-redes">
-                    <li><a href="" ><i class="fab fa-whatsapp"></i>  +54 9 11 12344567</a></li>
-                    <li><a href="" ><i class="fab fa-facebook"></i>  /checCerveceria</a></li>
-                    <li><a href="" ><i class="fab fa-instagram"></i> @cervezaChec</a></li>
-                </ul>
+    </main>
+
+    <footer>
+        <div class="main-footer">
+            <div class="div-content-logoFooter">
+                <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">
             </div>
-            <div class="copyright"> Copyright © 2022 - All rights reserved - Created by Grupo 8  </div>
-        </footer>
-        <div class="product">
-            <img src="/images/img-beer-temporary.jpg"  alt="beer">
-            <h4>Golden Ale</h4>
-            <h4>$ 200</h4>
-            <button>Seleccionar</button>
+            <ul class="footer-links">
+                <li>Enlaces</li>
+                <li><a href="">Tienda </a></li>
+                <li><a href="">Quienes somos </a></li>
+                <li><a href="">Nuestras Recetas </a></li>
+            </ul>
+            <ul class="footer-social-media">
+                <li>Contacto</li>
+                <li><a href=""> +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
+                <li><a href=""> @cervezaChec<i class="fab fa-instagram"></i></a></li>
+                <li><a href=""> /checCerveceria<i class="fab fa-facebook"></i></a></li>
+                <li><a href=""></i> chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
+            </ul>
         </div>
-        
-        <div class="product">
-            <img src="/images/img-beer-temporary.jpg"  alt="beer">
-            <h4>Irish Red</h4>
-            <h4>$ 200</h4>
-            <button>Seleccionar</button>
+        <div class="copyright">
+            Copyright © 2022 - All rights reserved - Created by Grupo 8
         </div>
+    </footer>
 
-        <div class="product">
-            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-            <h4>Stout</h4>
-            <h4>$ 200</h4>
-            <button>Seleccionar</button>
-        </div>
-
-        <div class="product">
-            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-            <h4>Honey</h4>
-            <h4>$ 200</h4>
-            <button>Seleccionar</button>
-        </div>
-
-        <div class="pack-customized">
-            <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
-            <h4>Pack Personalizado</h4>
-            <h4>Desde $ 600</h4>
-            <button>Seleccionar</button>
-        </div>
-
-    </section>
-    <div class="suscribe-section">
-        <h5 class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></h5>
-        <div class="suscribe-bar">            
-            <input type="text" class="suscribe-input-text" placeholder="ingresa tu mail">                
-            <i class="fas fa-times"></i>
-        </div> 
-        
-    </div>
-<footer>
-    <div class="main-footer">
-        <div class="div-content-logoFooter">
-            <img src="/Desing/Logo-Etiqueta-Originals/540x540sqr.png" class="logofooter">  
-        </div>
-        <ul class="footer-links">
-            <li>Enlaces</li>
-            <li><a href="">Tienda </a></li>
-            <li><a href="">Quienes somos </a></li>
-            <li><a href="">Nuestras Recetas </a></li>
-        </ul>
-        <ul class="footer-social-media">
-            <li>Contacto</li>
-            <li><a href="" >  +54 9 11 12344567<i class="fab fa-whatsapp"></i></a></li>
-            <li><a href="" > @cervezaChec<i class="fab fa-instagram"></i></a></li>
-            <li><a href="" >  /checCerveceria<i class="fab fa-facebook"></i></a></li>
-            <li><a href="" ></i>  chec@cerveza.com.ar<i class="far fa-envelope"></i></a></li>
-        </ul>
-    </div>
-    <div class="copyright">
-        Copyright © 2022 - All rights reserved - Created by Grupo 8
-    </div>
-</footer>
 </body>
-</html>
-</body>
+
 </html>
