--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/Desing/Logo-Etiqueta-Originals/fav-icon.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,13 +18,12 @@
             <ul class="left-navbar">                
                 <li><a href="/">Home </a></li>
                 <li><a href="">Quienes somos </a></li>
-                <li><a href="/views/productPage.html">Nuestras Recetas </a></li>
+                <li><a href="/productPage.html">Nuestras Recetas </a></li>
                 <li><a href="">Contactanos </a></li>
             </ul>
             <ul class="rigth-navbar">
-                <li><a href="/views/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/views/productDetail.html" class="tienda-botton">Tienda </a></li>
-                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>            
+                <li><a href="/login.html">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/productDetail.html" class="tienda-botton">Tienda <i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav> 
         <div class="secondary-navbar">
