--- a/views/login.html
+++ b/views/login.html
@@ -23,8 +23,7 @@
             </ul>
             <ul class="rigth-navbar">
                 <li><a href="/login.html">Ingresá  <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="/productDetail.html" class="tienda-botton">Tienda </a></li>
-                <li><a href="#" class="Tienda"><i class="fas fa-shopping-cart"></i></a></li>            
+                <li><a href="/productDetail.html" class="tienda-botton">Tienda<i class="fas fa-shopping-cart"></i></a></li>
             </ul>
         </nav> 
         <div class="secondary-navbar">
@@ -43,7 +42,17 @@
         </div>
     </header>
     <section>
-        
+        <div class="lg-div-form">
+            <div class="lg-div-login">
+                <button><i class="fa-brands fa-google"> Ingresar con Google </i></button>
+                <button><i class="fa-brands fa-facebook-f"> Ingresar con Facebook </i></button>
+            </div>
+            <form action="" class="lg-form-login">
+                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Contraseña">
+                <button type="submit">Ingresar</button>
+            </form>
+        </div>
     </section>
     <div class="suscribe-section">
         <h5 class="suscribe-text">Dejanos tu mail y recibí todas nuestras ofertas <i class="fa-solid fa-hands-clapping"></i></h5>
