agrego html de Product Detail perdido en algún merge

--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -42,11 +42,38 @@
             </div>           
         </div>
     </header>
-    <section>
+    <section class="pp-product-area">
 
         <div class="pp-product-imgs">
             <img src="/images/img-beer-temporary.jpg" width="360" alt="beer">
         </div>
+
+        <div class="pp-product-info">
+            <h4>Stout</h4>
+            <p>Cerveza negra con notas a café y chocolate levemente lupulada y moderada en alcohol.</p>
+            <ul class="pp-beer-attributes">
+                <li><h5>Amargor:</h5> <p>30%</p></li>
+                <li><h5>Alcohol:</h5> <p>6 V/V</p></li>
+                <li><h5>Color:</h5> <p>35 SRM</p></li>
+                <li><h5>Lúpulo/s:</h5> <p>Cascade</p></li>
+            </ul>
+
+            <div>
+                <form class="pp-product-form">
+                    <input type='checkbox' name="productOption">Botella 500 ml
+                    <input type='checkbox' name="productOption">Botella 1 lt
+                    <input type='checkbox' name="productOption">Pack x 6 - 500 ml
+                    <input type='checkbox' name="productOption">Pack x 6 - 1 lt
+                </form>
+        
+                <div class="pp-options">
+                    <button class="pp-buy">Comprar</button>
+                    <button class="pp-add">Agregar al carrito</button>
+                </div>
+            </div>
+        </div>
+        
+    </section>
 
 
     <div class="suscribe-section">
